--- a/covariance/Covariance Matrix Initial Tests.ipynb
+++ b/covariance/Covariance Matrix Initial Tests.ipynb
@@ -5,7 +5,17 @@
    "execution_count": 1,
    "id": "2c59599b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andre/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-09-26 21:29:22,171\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import sf_quant as sf\n",
     "import polars as pl\n",
@@ -20,7 +30,25 @@
    "execution_count": 2,
    "id": "f0703495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "No such file or directory (os error 2): russell_3000_daily.parquet\n\nThis error occurred with the following context stack:\n\t[1] 'parquet scan'\n\t[2] 'sink'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      2\u001b[39m end = dt.date(\u001b[32m2024\u001b[39m, \u001b[32m12\u001b[39m, \u001b[32m31\u001b[39m)\n\u001b[32m      4\u001b[39m columns = [\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mdate\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      6\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mbarrid\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mspecific_return\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     10\u001b[39m ]\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m df = \u001b[43mpl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_parquet\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrussell_3000_daily.parquet\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m df.write_parquet(\u001b[33m\"\u001b[39m\u001b[33mrussell_3000_daily.parquet\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/_utils/deprecation.py:128\u001b[39m, in \u001b[36mdeprecate_renamed_parameter.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    123\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(function)\n\u001b[32m    124\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapper\u001b[39m(*args: P.args, **kwargs: P.kwargs) -> T:\n\u001b[32m    125\u001b[39m     _rename_keyword_argument(\n\u001b[32m    126\u001b[39m         old_name, new_name, kwargs, function.\u001b[34m__qualname__\u001b[39m, version\n\u001b[32m    127\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/_utils/deprecation.py:128\u001b[39m, in \u001b[36mdeprecate_renamed_parameter.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    123\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(function)\n\u001b[32m    124\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapper\u001b[39m(*args: P.args, **kwargs: P.kwargs) -> T:\n\u001b[32m    125\u001b[39m     _rename_keyword_argument(\n\u001b[32m    126\u001b[39m         old_name, new_name, kwargs, function.\u001b[34m__qualname__\u001b[39m, version\n\u001b[32m    127\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/io/parquet/functions.py:289\u001b[39m, in \u001b[36mread_parquet\u001b[39m\u001b[34m(source, columns, n_rows, row_index_name, row_index_offset, parallel, use_statistics, hive_partitioning, glob, schema, hive_schema, try_parse_hive_dates, rechunk, low_memory, storage_options, credential_provider, retries, use_pyarrow, pyarrow_options, memory_map, include_file_paths, missing_columns, allow_missing_columns)\u001b[39m\n\u001b[32m    286\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    287\u001b[39m         lf = lf.select(columns)\n\u001b[32m--> \u001b[39m\u001b[32m289\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/_utils/deprecation.py:97\u001b[39m, in \u001b[36mdeprecate_streaming_parameter.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     93\u001b[39m         kwargs[\u001b[33m\"\u001b[39m\u001b[33mengine\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[33m\"\u001b[39m\u001b[33min-memory\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     95\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m kwargs[\u001b[33m\"\u001b[39m\u001b[33mstreaming\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m---> \u001b[39m\u001b[32m97\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/lazyframe/opt_flags.py:330\u001b[39m, in \u001b[36mforward_old_opt_flags.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    327\u001b[39m         optflags = cb(optflags, kwargs.pop(key))  \u001b[38;5;66;03m# type: ignore[no-untyped-call,unused-ignore]\u001b[39;00m\n\u001b[32m    329\u001b[39m kwargs[\u001b[33m\"\u001b[39m\u001b[33moptimizations\u001b[39m\u001b[33m\"\u001b[39m] = optflags\n\u001b[32m--> \u001b[39m\u001b[32m330\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/QuantBattle2025/orthogonal-alphas/.venv/lib/python3.13/site-packages/polars/lazyframe/frame.py:2407\u001b[39m, in \u001b[36mLazyFrame.collect\u001b[39m\u001b[34m(self, type_coercion, predicate_pushdown, projection_pushdown, simplify_expression, slice_pushdown, comm_subplan_elim, comm_subexpr_elim, cluster_with_columns, collapse_joins, no_optimization, engine, background, optimizations, **_kwargs)\u001b[39m\n\u001b[32m   2405\u001b[39m \u001b[38;5;66;03m# Only for testing purposes\u001b[39;00m\n\u001b[32m   2406\u001b[39m callback = _kwargs.get(\u001b[33m\"\u001b[39m\u001b[33mpost_opt_callback\u001b[39m\u001b[33m\"\u001b[39m, callback)\n\u001b[32m-> \u001b[39m\u001b[32m2407\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m wrap_df(\u001b[43mldf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallback\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: No such file or directory (os error 2): russell_3000_daily.parquet\n\nThis error occurred with the following context stack:\n\t[1] 'parquet scan'\n\t[2] 'sink'\n"
+     ]
+    }
+   ],
    "source": [
     "start = dt.date(1996, 1, 1)\n",
     "end = dt.date(2024, 12, 31)\n",
@@ -40,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e257f18c",
    "metadata": {},
    "outputs": [
@@ -94,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8ce1b788",
    "metadata": {},
    "outputs": [
@@ -148,101 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a9d01455",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape: (1_200, 26)\n",
-      "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
-      "│ date      ┆ returns1  ┆ returns2  ┆ returns3  ┆ … ┆ est_cov31 ┆ est_cov32 ┆ est_cov33 ┆ cov_erro │\n",
-      "│ ---       ┆ ---       ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ r        │\n",
-      "│ date      ┆ f64       ┆ f64       ┆ f64       ┆   ┆ f64       ┆ f64       ┆ f64       ┆ ---      │\n",
-      "│           ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ f64      │\n",
-      "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
-      "│ 2013-03-2 ┆ 0.023904  ┆ 0.008825  ┆ 0.025592  ┆ … ┆ 0.000037  ┆ 0.000024  ┆ 0.00016   ┆ 8.3230e- │\n",
-      "│ 8         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ 7        │\n",
-      "│ 2013-04-0 ┆ -0.0508   ┆ -0.023443 ┆ -0.022719 ┆ … ┆ 0.000042  ┆ 0.000028  ┆ 0.000177  ┆ 0.000002 │\n",
-      "│ 1         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ 2013-04-0 ┆ -0.003416 ┆ -0.031888 ┆ -0.001524 ┆ … ┆ 0.000063  ┆ 0.00003   ┆ 0.000191  ┆ 0.000003 │\n",
-      "│ 2         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ 2013-04-0 ┆ 0.002285  ┆ -0.023316 ┆ -0.055725 ┆ … ┆ 0.000014  ┆ -0.000015 ┆ 0.000198  ┆ 0.000002 │\n",
-      "│ 3         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ 2013-04-0 ┆ 0.006612  ┆ 0.009094  ┆ -0.001213 ┆ … ┆ -0.000045 ┆ -0.000021 ┆ 0.000213  ┆ 0.000012 │\n",
-      "│ 4         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ …         ┆ …         ┆ …         ┆ …         ┆ … ┆ …         ┆ …         ┆ …         ┆ …        │\n",
-      "│ 2017-12-2 ┆ -0.033333 ┆ 0.000254  ┆ 0.007785  ┆ … ┆ 0.00019   ┆ 0.000038  ┆ 0.000569  ┆ 9.4357e- │\n",
-      "│ 2         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ 7        │\n",
-      "│ 2017-12-2 ┆ 0.0       ┆ 0.002284  ┆ 0.002107  ┆ … ┆ 0.000214  ┆ 0.00004   ┆ 0.000631  ┆ 9.1955e- │\n",
-      "│ 6         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ 7        │\n",
-      "│ 2017-12-2 ┆ 0.0       ┆ -0.000506 ┆ -0.001402 ┆ … ┆ 0.000235  ┆ 0.000041  ┆ 0.000701  ┆ 0.000001 │\n",
-      "│ 7         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ 2017-12-2 ┆ -0.002463 ┆ -0.003799 ┆ 0.009123  ┆ … ┆ 0.000253  ┆ 0.000039  ┆ 0.000774  ┆ 0.000001 │\n",
-      "│ 8         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "│ 2017-12-2 ┆ -0.001235 ┆ -0.005594 ┆ 0.004172  ┆ … ┆ 0.000292  ┆ 0.000043  ┆ 0.000829  ┆ 0.000001 │\n",
-      "│ 9         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-      "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘\n",
-      "0.011194405097652708\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "r = 0.9 #ratio for geometric weighting.\n",
-    "b = 0.9\n",
-    "\n",
-    "error = 0.01 #approximately the contribution of the last day included in the average.\n",
-    "num_r = int(np.floor_divide(np.log(error), np.log(r))) #number of days computed in the average.\n",
-    "weights_r = [(r**i) for i in range(1, num_r + 1)] #weights for the rolling sum. Note they are automatially normalized.\n",
-    "\n",
-    "num_b = int(np.floor_divide(np.log(error), np.log(b))) #number of days computed in the average.\n",
-    "weights_b = [(b**i) for i in range(1, num_r + 1)] #weights for the rolling sum. Note they are automatially normalized.\n",
-    "\n",
-    "exprs_cov_construction = [pl.col(\"date\").alias(\"date\")] #Expressions for constructing columns representing covariance matrix coefficients.\n",
-    "for i in range(1, 4):\n",
-    "    for j in range(1, 4):\n",
-    "        exprs_cov_construction.append(\n",
-    "            ((pl.col(f\"returns{i}\") - pl.col(f\"mu{i}\")) *\n",
-    "            (pl.col(f\"returns{j}\") - pl.col(f\"mu{j}\"))).alias(f\"cov{i}{j}\")\n",
-    "        )\n",
-    "\n",
-    "exprs_cov_est = [pl.col(\"date\").alias(\"date\")] #Expressions for constructing estimated covariance matrix coefficients.\n",
-    "for i in range(1, 4):\n",
-    "    for j in range(1, 4):\n",
-    "        exprs_cov_est.append(\n",
-    "            pl.col(f\"cov{i}{j}\").rolling_mean(num_r, weights_r).fill_null(strategy=\"backward\").alias(f\"est_cov{i}{j}\")\n",
-    "        )\n",
-    "\n",
-    "cov_data = training_data.with_columns(\n",
-    "    pl.col(\"returns1\").rolling_mean(num_b, weights_b).fill_null(strategy=\"backward\").alias(\"mu1\"),\n",
-    "    pl.col(\"returns2\").rolling_mean(num_b, weights_b).fill_null(strategy=\"backward\").alias(\"mu2\"),\n",
-    "    pl.col(\"returns3\").rolling_mean(num_b, weights_b).fill_null(strategy=\"backward\").alias(\"mu3\")\n",
-    ").with_columns( #Need the mu's to compute the covariance matrices.\n",
-    "    exprs_cov_construction\n",
-    ").with_columns( #Need the covariance matrix coefficients to compute the estimated future covariance matrix.\n",
-    "    exprs_cov_est\n",
-    ").with_columns(\n",
-    "    sum(np.square(pl.col(f\"cov{i}{j}\").shift(1) - pl.col(f\"est_cov{i}{j}\")) for i in range(1, 4) for j in range(1, 4)).alias(\"cov_error\")\n",
-    ").filter(\n",
-    "    pl.col(\"date\").is_between(startDate + dt.timedelta(num_r + num_b), endDate) \n",
-    "    #rolling_mean introduces a null in a row when there are too many weights_r for the num_rber of available elements. \n",
-    "    #this is just filtering out backfilled nulls from two rolling_mean steps.\n",
-    ")\n",
-    "#pl.col(f\"est_cov{i}{j}\") is the estimated future covariance matrix at time step t. We need to compare it to the actual covariance matrix at time t+1.\n",
-    "\n",
-    "print(cov_data)\n",
-    "\n",
-    "#We now compute the element-wise squared error of the estimated covariance matrix for each t.\n",
-    "error = cov_data.select(pl.sum(\"cov_error\"))[0, 0]\n",
-    "print(error)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dd27fcc4",
    "metadata": {},
    "outputs": [],
@@ -264,7 +198,7 @@
     "                ((pl.col(f\"returns{i}\") - pl.col(f\"mu{i}\")) *\n",
     "                (pl.col(f\"returns{j}\") - pl.col(f\"mu{j}\"))).alias(f\"cov{i}{j}\")\n",
     "            )\n",
-    "\n",
+    "            \n",
     "    exprs_cov_est = [pl.col(\"date\").alias(\"date\")] #Expressions for constructing estimated covariance matrix coefficients.\n",
     "    for i in range(1, 4):\n",
     "        for j in range(1, 4):\n",
@@ -302,12 +236,13 @@
     "\n",
     "    #cov_rel_error = cov_data.select(pl.mean(\"cov_rel_error\"))[0, 0]  #I think volatility makes this a bad measure\n",
     "\n",
-    "    return cov_error, cov_mag, cov_error_null, [r, b], (num_r + num_b)"
+    "    return cov_error, cov_mag, cov_error_null, [r, b], (num_r + num_b)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "11433422",
    "metadata": {},
    "outputs": [
@@ -352,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "feacbe80",
    "metadata": {},
    "outputs": [
