Saving progress on debugging the weights tracking

--- a/signal_weights/signal_data.ipynb
+++ b/signal_weights/signal_data.ipynb
@@ -12,7 +12,7 @@
      "text": [
       "/home/kylecm11/silver_fund/orthogonal-alphas/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-09-28 23:23:22,159\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2025-09-30 10:14:00,815\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "79e9fd83",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9bad91aa",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
     "            .alias(\"meanrev_temp\")\n",
     "    )\n",
     "    .with_columns(\n",
-    "        (-pl.col(\"meanrev_temp\").shift(1).over(\"barrid\")).alias(\"meanrev\")\n",
+    "        (-pl.col(\"meanrev_temp\")).alias(\"meanrev\")\n",
     "    )\n",
     "    .with_columns(\n",
     "        (-pl.col(\"predicted_beta\")).alias(\"bab\")\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b47d8702",
    "metadata": {},
    "outputs": [
@@ -170,12 +170,9 @@
    ],
    "source": [
     "print(df.shape)\n",
-    "\n",
+    "# WHY IS WITH THIS PRICE LAG, NOT PRICE\n",
     "df = (\n",
     "    df.sort('barrid', 'date')\n",
-    "      .with_columns(\n",
-    "          pl.col('price').shift(1).over('barrid').alias('price_lag')\n",
-    "      )\n",
     "      .filter(\n",
     "          pl.col('price').gt(5),\n",
     "          (\n",
