--- a/weightCheck.ipynb
+++ b/weightCheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "0ba8c316",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "2bc1cf29",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "' \\nConstraints we have:\\n- Full investment\\n- Unit beta\\n- No buying on margin\\n- Long only\\n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,20 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "c45187fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read weights\n",
     "\n",
-    "weights = pl.read_parquet('all_weights_pivot.parquet')\n",
+    "weights = pl.read_parquet('signal_weights/weights/all_weights_pivot.parquet')\n",
     "r3000_daily = pl.read_parquet('russell_3000_daily.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "0f3c8bda",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "└────────────┴─────────┴────────┴────────┴───┴─────────────┴─────────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "a1caa62e",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "└────────────┴─────────┴─────────────┴────────────────┴─────────────────┘"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "b5fefbde",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "13b1ca26",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "(True, True, True)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "45bd6024",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, False, False)"
+       "(True, True, True)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,22 +269,34 @@
     "        pl.sum(\"bab_beta\").alias(\"bab_beta_sum\"),\n",
     "        pl.sum(\"meanrev_beta\").alias(\"meanrev_beta_sum\"),\n",
     "        pl.sum(\"momentum_beta\").alias(\"momentum_beta_sum\"),\n",
+    "\n",
+    "        # Also keep weight sums for the OR condition\n",
+    "        pl.sum(\"bab_weight\").alias(\"bab_weight_sum\"),\n",
+    "        pl.sum(\"meanrev_weight\").alias(\"meanrev_weight_sum\"),\n",
+    "        pl.sum(\"momentum_weight\").alias(\"momentum_weight_sum\"),\n",
     "    ])\n",
     "    .with_columns([\n",
-    "        # Check constraint: sum ≈ 1\n",
-    "        # If all weights are null → beta_sum = null → set result = None\n",
     "        pl.when(pl.col(\"bab_beta_sum\").is_not_null())\n",
-    "          .then(((pl.col(\"bab_beta_sum\") - 1).abs() < tol))\n",
+    "          .then(\n",
+    "              ((pl.col(\"bab_beta_sum\") - 1).abs() < tol) |\n",
+    "              (pl.col(\"bab_weight_sum\") == 0)\n",
+    "          )\n",
     "          .otherwise(None).alias(\"bab_unit_beta_ok\"),\n",
     "\n",
     "        pl.when(pl.col(\"meanrev_beta_sum\").is_not_null())\n",
-    "          .then(((pl.col(\"meanrev_beta_sum\") - 1).abs() < tol))\n",
+    "          .then(\n",
+    "              ((pl.col(\"meanrev_beta_sum\") - 1).abs() < tol) |\n",
+    "              (pl.col(\"meanrev_weight_sum\") == 0)\n",
+    "          )\n",
     "          .otherwise(None).alias(\"meanrev_unit_beta_ok\"),\n",
     "\n",
     "        pl.when(pl.col(\"momentum_beta_sum\").is_not_null())\n",
-    "          .then(((pl.col(\"momentum_beta_sum\") - 1).abs() < tol))\n",
+    "          .then(\n",
+    "              ((pl.col(\"momentum_beta_sum\") - 1).abs() < tol) |\n",
+    "              (pl.col(\"momentum_weight_sum\") == 0)\n",
+    "          )\n",
     "          .otherwise(None).alias(\"momentum_unit_beta_ok\"),\n",
-    "      ])\n",
+    "    ])\n",
     ")\n",
     "\n",
     "unit_beta_ok = (\n",
@@ -302,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "503bd57f",
    "metadata": {},
    "outputs": [
@@ -316,31 +328,31 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (251, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>bab_beta_sum</th><th>meanrev_beta_sum</th><th>momentum_beta_sum</th><th>bab_unit_beta_ok</th><th>meanrev_unit_beta_ok</th><th>momentum_unit_beta_ok</th></tr><tr><td>date</td><td>f64</td><td>f64</td><td>f64</td><td>bool</td><td>bool</td><td>bool</td></tr></thead><tbody><tr><td>1995-11-07</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-04-01</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-07-20</td><td>1.0</td><td>0.0</td><td>0.0</td><td>true</td><td>false</td><td>false</td></tr><tr><td>1995-07-14</td><td>1.0</td><td>0.0</td><td>0.0</td><td>true</td><td>false</td><td>false</td></tr><tr><td>1996-03-29</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1995-10-17</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-10-26</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-02-22</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-02-28</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-03-11</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr></tbody></table></div>"
+       "<small>shape: (50, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>bab_beta_sum</th><th>meanrev_beta_sum</th><th>momentum_beta_sum</th><th>bab_unit_beta_ok</th><th>meanrev_unit_beta_ok</th><th>momentum_unit_beta_ok</th></tr><tr><td>date</td><td>f64</td><td>f64</td><td>f64</td><td>bool</td><td>bool</td><td>bool</td></tr></thead><tbody><tr><td>1996-03-14</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-11-07</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-11-13</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-07-05</td><td>1.0</td><td>0.0</td><td>0.0</td><td>true</td><td>false</td><td>false</td></tr><tr><td>1996-03-20</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1995-08-31</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-01-12</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-05-22</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1995-09-06</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr><tr><td>1996-01-15</td><td>1.0</td><td>1.0</td><td>0.0</td><td>true</td><td>true</td><td>false</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (251, 7)\n",
+       "shape: (50, 7)\n",
        "┌────────────┬──────────────┬──────────────┬─────────────┬─────────────┬─────────────┬─────────────┐\n",
        "│ date       ┆ bab_beta_sum ┆ meanrev_beta ┆ momentum_be ┆ bab_unit_be ┆ meanrev_uni ┆ momentum_un │\n",
        "│ ---        ┆ ---          ┆ _sum         ┆ ta_sum      ┆ ta_ok       ┆ t_beta_ok   ┆ it_beta_ok  │\n",
        "│ date       ┆ f64          ┆ ---          ┆ ---         ┆ ---         ┆ ---         ┆ ---         │\n",
        "│            ┆              ┆ f64          ┆ f64         ┆ bool        ┆ bool        ┆ bool        │\n",
        "╞════════════╪══════════════╪══════════════╪═════════════╪═════════════╪═════════════╪═════════════╡\n",
+       "│ 1996-03-14 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
        "│ 1995-11-07 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1996-04-01 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1995-07-20 ┆ 1.0          ┆ 0.0          ┆ 0.0         ┆ true        ┆ false       ┆ false       │\n",
-       "│ 1995-07-14 ┆ 1.0          ┆ 0.0          ┆ 0.0         ┆ true        ┆ false       ┆ false       │\n",
-       "│ 1996-03-29 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1995-11-13 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1995-07-05 ┆ 1.0          ┆ 0.0          ┆ 0.0         ┆ true        ┆ false       ┆ false       │\n",
+       "│ 1996-03-20 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
        "│ …          ┆ …            ┆ …            ┆ …           ┆ …           ┆ …           ┆ …           │\n",
-       "│ 1995-10-17 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1995-10-26 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1996-02-22 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1996-02-28 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
-       "│ 1996-03-11 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1995-08-31 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1996-01-12 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1996-05-22 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1995-09-06 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
+       "│ 1996-01-15 ┆ 1.0          ┆ 1.0          ┆ 0.0         ┆ true        ┆ true        ┆ false       │\n",
        "└────────────┴──────────────┴──────────────┴─────────────┴─────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +367,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "failed_unit_beta"
+    "failed_unit_beta.head(50)"
    ]
   },
   {
@@ -603,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dv_intern",
+   "display_name": "orthogonal-alphas",
    "language": "python",
    "name": "python3"
   },
@@ -617,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
