Added XGBoost, windows to models, lags as list, new weights

--- a/signal_weights/signal_data.ipynb
+++ b/signal_weights/signal_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d315eba7",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "/home/kylecm11/silver_fund/orthogonal-alphas/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-09-30 16:04:16,581\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2025-09-30 22:40:52,037\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -203,6 +203,34 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "09633b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_year_weights = pl.read_parquet('weights/momentum_weights_2023-06-27_2024-06-26.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e67fce3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "251.99999998255518\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(one_year_weights['weight'].sum())"
    ]
   }
  ],
