added comments for BL folder

--- a/BL/omegaMatrix/calcOmega.ipynb
+++ b/BL/omegaMatrix/calcOmega.ipynb
@@ -93,11 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "aaae9664",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Join all of our signals calculated rolling sharpes\n",
     "rolling_sharpes = (\n",
     "    bab_sr.join(mom_sr, on=\"date\", how=\"full\", suffix=\"_mom\")\n",
     "          .join(meanrev_sr, on=\"date\", how=\"full\", suffix=\"_meanrev\")\n",
@@ -108,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "22f789e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Join with qMatrix ---\n",
+    "# Join our rolling sharpes with qMatrix \n",
     "q_with_sr = qMatrix.join(rolling_sharpes, on=\"date\", how=\"inner\")"
    ]
   },
@@ -168,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e711a75e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Compute Omega diagonals ---\n",
+    "# Compute Omega diagonals as said by brandon \n",
     "omega_diag = (\n",
     "    q_with_sr\n",
     "    .with_columns([\n",
