--- a/BL/priorCalc/checkPriors.ipynb
+++ b/BL/priorCalc/checkPriors.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e5978215",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,7 @@
     }
    ],
    "source": [
+    "# Read our priors dataframe\n",
     "priors = pl.read_parquet(\"../data/priors.parquet\")\n",
     "\n",
     "priors"
@@ -109,9 +110,11 @@
     }
    ],
    "source": [
+    "# Specify start and end date\n",
     "start = dt.date(1995, 6, 30)\n",
     "end = dt.date(2024, 12, 31)\n",
     "\n",
+    "# Load in benchmark weights\n",
     "benchmark = sfd.load_benchmark(\n",
     "    start=start,\n",
     "    end=end,\n",
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e1cebe3d",
    "metadata": {},
    "outputs": [
@@ -165,6 +168,7 @@
     }
    ],
    "source": [
+    "# Get the columns we need and load in returns for each security in our universe\n",
     "columns = [\"date\", \"barrid\", \"fwd_return\"]\n",
     "returns = sfd.load_assets(start=start, end=end, in_universe=True, columns=columns)\n",
     "\n",
@@ -173,17 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6066b37a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine our benchmark weights with our returns dataframe \n",
     "benchmark_returns = (\n",
     "    benchmark.join(returns, on=[\"date\", \"barrid\"], how=\"left\")\n",
+    "    # Move into decimal space\n",
     "    .with_columns(\n",
     "        (pl.col(\"fwd_return\") / 100)\n",
     "    )\n",
     "    .group_by(\"date\")\n",
+    "    # Caclculate the benchmark return for that day\n",
     "    .agg(\n",
     "        (pl.col(\"fwd_return\") * pl.col(\"weight\")).sum().alias(\"benchmark_return\")\n",
     "    )\n",
@@ -384,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "597d89e2",
    "metadata": {},
    "outputs": [
@@ -400,6 +407,7 @@
     }
    ],
    "source": [
+    "# Calculate the mean variation between our prior (CAPM) and the actual benchmark\n",
     "average_diff = comp_pd[\"diff\"].mean()\n",
     "\n",
     "average_diff"
