--- a/BL/qMatrix/calcQ.ipynb
+++ b/BL/qMatrix/calcQ.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "We can either get a q matrix by:\n",
     "- a ML approach to predict expected returns for our alphas, or\n",
-    "- w_s * alpha_s"
+    "- w_s * alpha_s\n",
+    "\n",
+    "We will do the second approach here"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "012a3ffc",
    "metadata": {},
    "outputs": [
@@ -79,6 +81,7 @@
     }
    ],
    "source": [
+    "# Get calculated signal weights\n",
     "signal_weights = pl.read_parquet(\"../../signal_weights.parquet\")\n",
     "\n",
     "signal_weights"
@@ -86,17 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "46fe82bb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in our alpha forecasts that are calculated\n",
     "bab_alpha = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalAlphas/bab_alpha.parquet\")\n",
     "\n",
     "meanrev_alpha = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalAlphas/meanrev_alpha.parquet\")\n",
     "\n",
     "mom_alpha = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalAlphas/mom_alpha.parquet\")\n",
     "\n",
+    "# Rename to combine them\n",
     "bab_alpha_renamed = bab_alpha.select(['date', 'barrid', 'alpha']).rename({'alpha': 'bab_alpha'})\n",
     "mom_alpha_renamed = mom_alpha.select(['date', 'barrid', 'alpha']).rename({'alpha': 'momentum_alpha'})\n",
     "meanrev_alpha_renamed = meanrev_alpha.select(['date', 'barrid', 'alpha']).rename({'alpha': 'meanrev_alpha'})\n",
@@ -162,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "30657b73",
    "metadata": {},
    "outputs": [],
@@ -171,7 +176,7 @@
     "qMatrix = combined_alpha.join(\n",
     "    signal_weights,\n",
     "    on=['date', 'barrid'],\n",
-    "    how='left'  # or 'inner' if you only want matching rows\n",
+    "    how='left' \n",
     ")\n",
     "\n",
     "# Multiply each alpha by its respective weight to get signal expected returns\n",
@@ -181,7 +186,7 @@
     "    (pl.col('meanrev_alpha') * pl.col('meanrev_weight')).alias('meanrev_er')\n",
     "])\n",
     "\n",
-    "# If you want to keep only the essential columns:\n",
+    "# Keep only the essential columns\n",
     "qMatrix = qMatrix.select([\n",
     "    'date',\n",
     "    'barrid',\n",
@@ -299,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "55768d4a",
    "metadata": {},
    "outputs": [
@@ -342,10 +347,12 @@
     }
    ],
    "source": [
+    "# Read in the actual returns for our signals\n",
     "signal_bab = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalReturns/signal_bab.parquet\")\n",
     "signal_meanrev = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalReturns/signal_meanrev.parquet\")\n",
     "signal_momentum = pl.read_parquet(\"/home/jaic007/silverFund/combineSignal/signalCalc/signalReturns/signal_momentum.parquet\")\n",
     "\n",
+    "# Merge all of them\n",
     "signals_daily = (\n",
     "    signal_bab\n",
     "    .join(signal_meanrev, on=\"date\", how=\"full\", suffix=\"_meanrev\")\n",
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c7b0a25b",
    "metadata": {},
    "outputs": [
@@ -404,6 +411,7 @@
     }
    ],
    "source": [
+    "# Merge to compare our signal expected return and actual return\n",
     "comparison = (\n",
     "    signal_er.join(signals_daily, on=\"date\", how=\"inner\")\n",
     "            .sort(\"date\")\n",
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "57122230",
    "metadata": {},
    "outputs": [
@@ -447,12 +455,14 @@
     }
    ],
    "source": [
+    "# Find correlation between the expected return and actual return\n",
     "corrs = comparison.select([\n",
     "    pl.corr(\"bab_er\", \"bab_return\").alias(\"bab_corr\"),\n",
     "    pl.corr(\"momentum_er\", \"momentum_return\").alias(\"momentum_corr\"),\n",
     "    pl.corr(\"meanrev_er\", \"meanrev_return\").alias(\"meanrev_corr\")\n",
     "])\n",
     "\n",
+    "# Calculate mean difference between the expected signal return and actual return\n",
     "diffs = comparison.select([\n",
     "    (pl.col(\"bab_er\") - pl.col(\"bab_return\")).mean().alias(\"bab_diff\"),\n",
     "    (pl.col(\"momentum_er\") - pl.col(\"momentum_return\")).mean().alias(\"momentum_diff\"),\n",
