Added equal weight summary to synMVO

--- a/synMVO/synMVO.ipynb
+++ b/synMVO/synMVO.ipynb
@@ -12,7 +12,7 @@
      "text": [
       "/home/kylecm11/silver_fund/orthogonal-alphas/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-02 22:29:09,498\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2025-10-03 09:01:33,050\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -131,59 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0ea29783",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (20_764_025, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>barrid</th><th>return</th><th>fwd_return</th><th>predicted_beta</th><th>momentum_alpha</th><th>meanrev_alpha</th><th>bab_alpha</th><th>momentum_weight</th><th>meanrev_weight</th><th>bab_weight</th></tr><tr><td>date</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1995-06-30</td><td>&quot;USAA191&quot;</td><td>0.051471</td><td>-0.013986</td><td>0.823795</td><td>null</td><td>null</td><td>0.003645</td><td>null</td><td>null</td><td>-1.0844e-20</td></tr><tr><td>1995-06-30</td><td>&quot;USAA1W1&quot;</td><td>0.057971</td><td>0.0</td><td>1.105022</td><td>null</td><td>null</td><td>-0.010093</td><td>null</td><td>null</td><td>-9.1201e-22</td></tr><tr><td>1995-06-30</td><td>&quot;USAA1Y1&quot;</td><td>0.028777</td><td>-0.017483</td><td>1.636947</td><td>null</td><td>null</td><td>-0.027408</td><td>null</td><td>null</td><td>-4.8273e-21</td></tr><tr><td>1995-06-30</td><td>&quot;USAA2L1&quot;</td><td>0.036585</td><td>0.002941</td><td>0.725292</td><td>null</td><td>null</td><td>0.010805</td><td>null</td><td>null</td><td>-4.2673e-21</td></tr><tr><td>1995-06-30</td><td>&quot;USAA311&quot;</td><td>0.020134</td><td>-0.006579</td><td>0.798643</td><td>null</td><td>null</td><td>0.005402</td><td>null</td><td>null</td><td>-9.2198e-21</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-09-15</td><td>&quot;USBQZR1&quot;</td><td>-0.041651</td><td>null</td><td>1.365701</td><td>null</td><td>-0.159387</td><td>-0.024335</td><td>null</td><td>-1.3553e-20</td><td>-6.9890e-22</td></tr><tr><td>2025-09-15</td><td>&quot;USBRGT1&quot;</td><td>0.0</td><td>null</td><td>1.264243</td><td>null</td><td>0.012975</td><td>-0.005506</td><td>null</td><td>-3.4045e-19</td><td>-3.7165e-21</td></tr><tr><td>2025-09-15</td><td>&quot;USBRH21&quot;</td><td>0.011281</td><td>null</td><td>1.364664</td><td>null</td><td>-0.003457</td><td>-0.019368</td><td>null</td><td>-9.9263e-20</td><td>-2.6956e-21</td></tr><tr><td>2025-09-15</td><td>&quot;USBRKA1&quot;</td><td>-0.021757</td><td>null</td><td>0.319354</td><td>null</td><td>-0.001337</td><td>0.021217</td><td>null</td><td>-4.3920e-19</td><td>-5.5406e-21</td></tr><tr><td>2025-09-15</td><td>&quot;USBRKA2&quot;</td><td>-0.012441</td><td>null</td><td>0.331983</td><td>null</td><td>-0.002816</td><td>0.021041</td><td>null</td><td>-4.2459e-19</td><td>-4.9619e-21</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (20_764_025, 11)\n",
-       "┌────────────┬─────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬───────────┐\n",
-       "│ date       ┆ barrid  ┆ return    ┆ fwd_retur ┆ … ┆ bab_alpha ┆ momentum_ ┆ meanrev_w ┆ bab_weigh │\n",
-       "│ ---        ┆ ---     ┆ ---       ┆ n         ┆   ┆ ---       ┆ weight    ┆ eight     ┆ t         │\n",
-       "│ date       ┆ str     ┆ f64       ┆ ---       ┆   ┆ f64       ┆ ---       ┆ ---       ┆ ---       │\n",
-       "│            ┆         ┆           ┆ f64       ┆   ┆           ┆ f64       ┆ f64       ┆ f64       │\n",
-       "╞════════════╪═════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪═══════════╡\n",
-       "│ 1995-06-30 ┆ USAA191 ┆ 0.051471  ┆ -0.013986 ┆ … ┆ 0.003645  ┆ null      ┆ null      ┆ -1.0844e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆           ┆ 20        │\n",
-       "│ 1995-06-30 ┆ USAA1W1 ┆ 0.057971  ┆ 0.0       ┆ … ┆ -0.010093 ┆ null      ┆ null      ┆ -9.1201e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆           ┆ 22        │\n",
-       "│ 1995-06-30 ┆ USAA1Y1 ┆ 0.028777  ┆ -0.017483 ┆ … ┆ -0.027408 ┆ null      ┆ null      ┆ -4.8273e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆           ┆ 21        │\n",
-       "│ 1995-06-30 ┆ USAA2L1 ┆ 0.036585  ┆ 0.002941  ┆ … ┆ 0.010805  ┆ null      ┆ null      ┆ -4.2673e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆           ┆ 21        │\n",
-       "│ 1995-06-30 ┆ USAA311 ┆ 0.020134  ┆ -0.006579 ┆ … ┆ 0.005402  ┆ null      ┆ null      ┆ -9.2198e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆           ┆ 21        │\n",
-       "│ …          ┆ …       ┆ …         ┆ …         ┆ … ┆ …         ┆ …         ┆ …         ┆ …         │\n",
-       "│ 2025-09-15 ┆ USBQZR1 ┆ -0.041651 ┆ null      ┆ … ┆ -0.024335 ┆ null      ┆ -1.3553e- ┆ -6.9890e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆ 20        ┆ 22        │\n",
-       "│ 2025-09-15 ┆ USBRGT1 ┆ 0.0       ┆ null      ┆ … ┆ -0.005506 ┆ null      ┆ -3.4045e- ┆ -3.7165e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆ 19        ┆ 21        │\n",
-       "│ 2025-09-15 ┆ USBRH21 ┆ 0.011281  ┆ null      ┆ … ┆ -0.019368 ┆ null      ┆ -9.9263e- ┆ -2.6956e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆ 20        ┆ 21        │\n",
-       "│ 2025-09-15 ┆ USBRKA1 ┆ -0.021757 ┆ null      ┆ … ┆ 0.021217  ┆ null      ┆ -4.3920e- ┆ -5.5406e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆ 19        ┆ 21        │\n",
-       "│ 2025-09-15 ┆ USBRKA2 ┆ -0.012441 ┆ null      ┆ … ┆ 0.021041  ┆ null      ┆ -4.2459e- ┆ -4.9619e- │\n",
-       "│            ┆         ┆           ┆           ┆   ┆           ┆           ┆ 19        ┆ 21        │\n",
-       "└────────────┴─────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "big_data = alpha_data.join(weights_data, on=[\"date\", \"barrid\"], how=\"inner\").select(['date', 'barrid', 'return', 'fwd_return', 'predicted_beta', 'momentum_alpha', 'meanrev_alpha', 'bab_alpha', 'momentum_weight', 'meanrev_weight', 'bab_weight'])\n",
     "\n",
@@ -192,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5ea596ac",
    "metadata": {},
    "outputs": [
@@ -253,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "68de9585",
    "metadata": {},
    "outputs": [
@@ -313,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2ba738c6",
    "metadata": {},
    "outputs": [
@@ -363,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "65b8f2b1",
    "metadata": {},
    "outputs": [
@@ -371,7 +322,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7600/7600 [01:00<00:00, 124.80it/s]\n"
+      "  0%|          | 0/7600 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7600/7600 [01:01<00:00, 122.67it/s]\n"
      ]
     }
    ],
@@ -409,13 +367,13 @@
     "        alphas=alpha_vector,\n",
     "        covariance_matrix=cov_matrix,\n",
     "        constraints=constraints,\n",
-    "        gamma=20\n",
+    "        gamma=200\n",
     "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a2ee5be1",
    "metadata": {},
    "outputs": [],
@@ -442,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "47c39020",
    "metadata": {},
    "outputs": [
@@ -477,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "07bc54bf",
    "metadata": {},
    "outputs": [],
@@ -495,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0edf5ed9",
    "metadata": {},
    "outputs": [
@@ -560,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e4585c0a",
    "metadata": {},
    "outputs": [
@@ -574,17 +532,17 @@
       "│ ---        ┆ ---    │\n",
       "│ date       ┆ f64    │\n",
       "╞════════════╪════════╡\n",
-      "│ 2023-02-15 ┆ 1.0    │\n",
-      "│ 2011-04-13 ┆ 1.0    │\n",
-      "│ 2024-07-23 ┆ 1.0    │\n",
-      "│ 2008-01-17 ┆ 1.0    │\n",
-      "│ 2012-05-10 ┆ 1.0    │\n",
+      "│ 2016-08-29 ┆ 1.0    │\n",
+      "│ 2025-04-11 ┆ 1.0    │\n",
+      "│ 2015-03-24 ┆ 1.0    │\n",
+      "│ 2024-03-14 ┆ 1.0    │\n",
+      "│ 2000-11-14 ┆ 1.0    │\n",
       "│ …          ┆ …      │\n",
-      "│ 2005-03-02 ┆ 1.0    │\n",
-      "│ 1997-08-20 ┆ 1.0    │\n",
-      "│ 2000-11-08 ┆ 1.0    │\n",
-      "│ 2005-07-11 ┆ 1.0    │\n",
-      "│ 1998-05-06 ┆ 1.0    │\n",
+      "│ 1999-10-15 ┆ 1.0    │\n",
+      "│ 2012-09-12 ┆ 1.0    │\n",
+      "│ 2016-04-14 ┆ 1.0    │\n",
+      "│ 2002-04-16 ┆ 1.0    │\n",
+      "│ 2009-02-10 ┆ 1.0    │\n",
       "└────────────┴────────┘\n",
       "7599.18595990595\n",
       "(7600, 1)\n",
@@ -594,17 +552,17 @@
       "│ ---        ┆ ---    │\n",
       "│ date       ┆ u32    │\n",
       "╞════════════╪════════╡\n",
-      "│ 2013-06-07 ┆ 2711   │\n",
-      "│ 2020-03-31 ┆ 2543   │\n",
-      "│ 2024-03-14 ┆ 2604   │\n",
-      "│ 1999-10-18 ┆ 2800   │\n",
-      "│ 2020-12-21 ┆ 2821   │\n",
+      "│ 2000-11-14 ┆ 2650   │\n",
+      "│ 2023-02-15 ┆ 2637   │\n",
+      "│ 2005-07-14 ┆ 2896   │\n",
+      "│ 2011-04-13 ┆ 2659   │\n",
+      "│ 2015-12-11 ┆ 2782   │\n",
       "│ …          ┆ …      │\n",
-      "│ 2011-04-07 ┆ 2683   │\n",
-      "│ 1999-06-03 ┆ 2690   │\n",
-      "│ 2003-01-03 ┆ 2573   │\n",
-      "│ 2005-03-02 ┆ 2824   │\n",
-      "│ 2001-07-31 ┆ 2821   │\n",
+      "│ 2016-08-26 ┆ 2830   │\n",
+      "│ 2001-12-06 ┆ 2691   │\n",
+      "│ 2009-10-30 ┆ 2593   │\n",
+      "│ 1998-09-14 ┆ 2863   │\n",
+      "│ 2012-05-07 ┆ 2599   │\n",
       "└────────────┴────────┘\n"
      ]
     }
@@ -618,19 +576,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b27ec7f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "momentum_weights = weights_data.select(['date', 'barrid', 'momentum_weight']).rename({'momentum_weight': 'weight'})\n",
     "meanrev_weights = weights_data.select(['date', 'barrid', 'meanrev_weight']).rename({'meanrev_weight': 'weight'})\n",
-    "bab_weights = weights_data.select(['date', 'barrid', 'bab_weight']).rename({'bab_weight': 'weight'})"
+    "bab_weights = weights_data.select(['date', 'barrid', 'bab_weight']).rename({'bab_weight': 'weight'})\n",
+    "equal_weights = (\n",
+    "    weights_data\n",
+    "    .with_columns(pl.col('momentum_weight').add(pl.col('meanrev_weight')).add(pl.col('bab_weight')).truediv(3).alias('equal_weight'))\n",
+    "    .select(['date', 'barrid', 'equal_weight'])\n",
+    "    .rename({'equal_weight': 'weight'})\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9d01df3c",
    "metadata": {},
    "outputs": [],
@@ -671,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "85bbba1b",
    "metadata": {},
    "outputs": [],
@@ -681,12 +645,13 @@
     "synMVO_ret = get_returns_from_weights(final_weights)\n",
     "momentum_ret = get_returns_from_weights(momentum_weights)\n",
     "meanrev_ret = get_returns_from_weights(meanrev_weights)\n",
-    "bab_ret = get_returns_from_weights(bab_weights)"
+    "bab_ret = get_returns_from_weights(bab_weights)\n",
+    "equal_ret = get_returns_from_weights(equal_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e961daf2",
    "metadata": {},
    "outputs": [],
@@ -713,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "2cd6deb2",
    "metadata": {},
    "outputs": [
@@ -750,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e807edef",
    "metadata": {},
    "outputs": [
@@ -787,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "c854e7cc",
    "metadata": {},
    "outputs": [
@@ -824,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "54fe6dd6",
    "metadata": {},
    "outputs": [
@@ -857,6 +822,16 @@
    ],
    "source": [
     "plot_print_summary(bab_ret, title='Betting Against Beta Cumulative Log Returns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bc66fad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_print_summary(equal_ret, title='Equal Weights Cumulative Log Returns')"
    ]
   }
  ],
